--- a/Site/style.css
+++ b/Site/style.css
@@ -6,12 +6,22 @@ html {
     scroll-behavior: smooth;
 }
 
+::-webkit-scrollbar {
+    width: 10px;
+  }
+
+
+  ::-webkit-scrollbar-thumb {
+    background: #A982C8;
+    border-radius: 5px;
+  }
+
 body{
     width: 100vw;
     margin: 0;
     padding: 0;
     font-family: 'Montserrat';
-    overflow-x: hidden;   
+    overflow-x: hidden;  
 }
 
 .header {
